--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       <h1>JoKe Generator</h1>
       <p>Click the button to listen to a joke!!</p>
       <button class="click">Tell Me a JoKe</button>
-      <p class="caption">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat harum
-        itaque vel maiores nam culpa ea deleniti autem eius cumque!
-      </p>
+      <p class="caption"></p>
     </div>
     <script src="joke.js"></script>
   </body>
